--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -2,43 +2,61 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from langchain.chat_models import ChatOpenAI\n",
-    "\n",
-    "chat = ChatOpenAI(\n",
-    "    temperature= 0.1\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "AIMessage(content='Ciao! Mi chiamo Paolo. La distanza tra il Messico e la Thailandia è di circa 16.000 chilometri.')"
+       "'The distance between Mexico and Korea is approximately 11,000 kilometers (6,835 miles).'"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "from langchain.schema import HumanMessage, AIMessage, SystemMessage\n",
+    "from langchain.chat_models import ChatOpenAI\n",
+    "from langchain.prompts import PromptTemplate, ChatPromptTemplate\n",
+    "chat = ChatOpenAI(temperature= 0.1)\n",
+    "template = PromptTemplate.from_template(\"what is the distance between {country_a} and {country_b}?\")\n",
+    "prompt = template.format(country_a=\"Mexico\", country_b=\"Korea\")\n",
     "\n",
-    "messages = [\n",
-    "    SystemMessage(content = \"You are a geograpy expert. And you only reply in Italian.\"),\n",
-    "    AIMessage(content=\"Ciao, mi chiamoPaolo!\"),\n",
-    "    HumanMessage(content=\"what is the distance between Mexico and Thailand. Also What is your name?\")\n",
-    "]\n",
+    "chat.predict(prompt)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "AIMessage(content='Γεια σου! Το όνομά μου είναι Σωκράτης. Η απόσταση μεταξύ του Μεξικού και της Κορέας είναι περίπου 13.000 χιλιόμετρα.')"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "template = ChatPromptTemplate.from_messages ([\n",
+    "    (\"system\", \"You are a geograpy expert. And you only reply in {language}.\"),\n",
+    "    (\"ai\", \"Ciao, mi chiamo {name}!\"),\n",
+    "    (\"human\", \"what is the distance between {country_a} and {country_b}. Also What is your name?\")\n",
+    "])\n",
     "\n",
-    "chat.predict_messages(messages)"
+    "prompt = template.format_messages(\n",
+    "    language = \"Greek\",\n",
+    "    name = \"Socrates\",\n",
+    "    country_a = \"Mexico\",\n",
+    "    country_b = \"Korea\"\n",
+    ")\n",
+    "\n",
+    "chat.predict_messages(prompt)"
    ]
   }
  ],
